--- a/Lection15_Forms_updated/index.html
+++ b/Lection15_Forms_updated/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,11 @@
     <link rel="stylesheet" href="./styles/fontawesome.css">
     <link rel="stylesheet" href="./styles/brands.css">
     <link rel="stylesheet" href="./styles/solid.css">
+    <link rel="stylesheet" href="./styles/icomoon/style.css">
 
     <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
     <div class="page_wrapper">
         <section class="my_header">
@@ -31,11 +34,11 @@
                 <div class="business_container">
                     <div class="business_advice">
                         <p class="agency"> An Agency That Helps You </p>
-                            <h2 class="grow">Grow your Business</h2>
-                            <p class="business_description">Build an award winning website that grows your business with
-                                the help of Last Door. Our 15+ years of experience in building websites have grown
-                                businesses of 1000+ clients.</p>
-                            <butto class="business_button">Get Your Free Consultation Now</button>
+                        <h2 class="grow">Grow your Business</h2>
+                        <p class="business_description">Build an award winning website that grows your business with
+                            the help of Last Door. Our 15+ years of experience in building websites have grown
+                            businesses of 1000+ clients.</p>
+                        <butto class="business_button">Get Your Free Consultation Now</button>
                     </div>
                     <div class="business_image">
                         <img class="image_business" src="./assets/business.svg" alt="image_business">
@@ -44,44 +47,46 @@
             </div>
         </section>
         <section class="our_services">
-           <div class="services_container">
-            <p class="services">Our Services</p>
-            <p class="theme">Why choose Agency theme</p>
-            <div class="company_services">
-                <div class="responsive">
-                    <i class="fa-solid fa-plus"></i>
-                    <h3 class="responsive_header">Ultra Responsive</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
-                        fermentum vestibulum.</p>
-                </div>
-                <div class="award">
-                    <i class="fa-solid fa-award"></i>
-                    <h3>Award Winning Desing</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
-                        fermentum vestibulum.</p>
-                </div>
-                <div class="support">
-                    <i class="fa-solid fa-headset"></i>
-                    <h3>Support & Updates</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
-                        fermentum vestibulum.</p>
+            <div class="services_container">
+                <p class="services">Our Services</p>
+                <p class="theme">Why choose Agency theme</p>
+                <div class="company_services">
+                    <div class="responsive">
+                        <i class="fa-solid fa-computer"></i>
+                        <h3 class="responsive_header">Ultra Responsive</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
+                            fermentum vestibulum.</p>
+                    </div>
+                    <div class="award">
+                        <i class="fa-solid fa-award"></i>
+                        <h3>Award Winning Desing</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
+                            fermentum vestibulum.</p>
+                    </div>
+                    <div class="support">
+                        <i class="fa-solid fa-headset"></i>
+                        <h3>Support & Updates</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
+                            fermentum vestibulum.</p>
+                    </div>
                 </div>
             </div>
-           </div>
         </section>
         <section class="kpi">
             <div class="kpi_container">
-                <div class="websites">
-                    <p class="title_kpi">7.5K<i class="fa-solid fa-plus"></i></p>
-                    <p class="description_kpi">Websites, Softwares & Apps.</p>
-                </div>
-                <div class="years">
-                    <p class="title_kpi">15yrs<i class="fa-solid fa-plus"></i></p>
-                    <p class="description_kpi">Years of Experience</p>
-                </div>
-                <div class="customer">
-                    <p class="title_kpi">6.2K<i class="fa-solid fa-plus"></i></p>
-                    <p class="description_kpi">Customers Served</p>
+                <div class="kpi_items">
+                    <div class="websites">
+                        <p class="title_kpi">7.5K<i class="fa-solid fa-plus"></i></p>
+                        <p class="description_kpi">Websites, Softwares & Apps.</p>
+                    </div>
+                    <div class="years">
+                        <p class="title_kpi">15yrs<i class="fa-solid fa-plus"></i></p>
+                        <p class="description_kpi">Years of Experience</p>
+                    </div>
+                    <div class="customer">
+                        <p class="title_kpi">6.2K<i class="fa-solid fa-plus"></i></p>
+                        <p class="description_kpi">Customers Served</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -89,27 +94,87 @@
             <div class="about_container">
                 <p class="small_title">Robust Agency</p>
                 <p class="about_title">About Us</p>
-            <div class="about_description">
-                <div class="first_description">
-                    We specialise in website design, user interfaces, development & copywriting.
+                <div class="about_description">
+                    <div class="first_description">
+                        <!--<div class="first_description">
+                        We specialise in website design, user interfaces, development & copywriting.
+                    </div>-->
+                        <p class="italic_description">We specialise in website design, user interfaces, development &
+                            copywriting.</p>
+                        <!--<div class="second_description">We’re a website development studio focussed on creating immersive digital strategies for your business that take established brands to new heights and launch ambitious start-ups towards their goals.</div>-->
+                        <p class="development">We’re a website development studio focussed on creating immersive digital
+                            strategies for your business that take established brands to new heights and launch
+                            ambitious start-ups towards their goals.</p>
+                        <!--</div>-->
+                    </div>
+                    <div class="complete_description">
+                        <p class="complete">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis nisl
+                            vulputate justo consequat tempor. Nam gravida sed ipsum in pellentesque. Cras pellentesque
+                            placerat cursus. Ut ultrices ultricies finibus. Donec rutrum felis convallis, efficitur
+                            tellus sit amet, tristique metus. Integer eget sagittis urna.</p>
+                        <p>Aenean et facilisis mi, ut posuere eros. Vivamus nec velit at diam pretium blandit id nec
+                            urna. Aenean dignissim vehicula sapien ut vehicula. Aliquam gravida metus non ullamcorper
+                            vestibulum. Mauris lobortis purus at diam posuere, at molestie massa lobortis.</p>
+                    </div>
                 </div>
-                <div class="second_description">We’re a website development studio focussed on creating immersive digital strategies for your business that take established brands to new heights and launch ambitious start-ups towards their goals.</div>
+                <div class="about_logos">
+                    <img src="./assets/logo-hello-fresh.svg">
+                    <img src="./assets/logo-trivago.svg">
+                    <img src="./assets/logo-los-angelese-times.svg">
+                    <img src="./assets/logo-oracle.svg">
+                    <img src="./assets/logo-target.svg">
                 </div>
-                <div class="complete_description">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis nisl vulputate justo consequat tempor. Nam gravida sed ipsum in pellentesque. Cras pellentesque placerat cursus. Ut ultrices ultricies finibus. Donec rutrum felis convallis, efficitur tellus sit amet, tristique metus. Integer eget sagittis urna.</div>
-                    <div>Aenean et facilisis mi, ut posuere eros. Vivamus nec velit at diam pretium blandit id nec urna. Aenean dignissim vehicula sapien ut vehicula. Aliquam gravida metus non ullamcorper vestibulum. Mauris lobortis purus at diam posuere, at molestie massa lobortis.</div>
-                </div>
-            </div>
-            <div class="about_logos">
-                <img src="./assets/logo-hello-fresh.svg">
-                <img src="./assets/logo-trivago.svg">
-                <img src="./assets/logo-los-angelese-times.svg">
-                <img src="./assets/logo-oracle.svg">
-                <img src="./assets/logo-target.svg">
-            </div>
         </section>
-
     </div>
-    
+    <section class="relax_section">
+        <div class="relax_container">
+            <div class="relax">
+                <div class="relax_description">
+                    <h2>Please Relax, we will do the work.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis nisl vulputate justo
+                        consequat tempor. Nam gravida sed ipsum in pellentesque. Cras pellentesque placerat cursus.</p>
+                    <ul class="relax_items">
+                        <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </li>
+                        <li><i class="fa-solid fa-check"></i>Morbi iaculis nisl vulputate justo consequat tempor.</li>
+                        <li><i class="fa-solid fa-check"></i>Nam gravida sed ipsum in pellentesque.</li>
+                    </ul>
+                </div>
+                <img class="relax_image" src="assets/-g-Bitmap (1).svg" alt="relax_image">
+            </div>
+                <img class="rectangle_image" src="./assets/Rectangle.svg" aria-label="rectangle">
+        </div>
+    </section>
+    <section class="website">
+        <div class="website_container">
+            <p class="help">An Agency That Helps You</p>
+            <h2 class="website_heading">Start Building your Website today</h2>
+            <p class="website_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices purus lectus, et accumsan nibh suscipit sed. Nullam lorem dui, congue pharetra posuere vel, imperdiet ac lorem.</p>
+            <button class="website_button">Get Started Now</button>
+        </div>
+    </section>
+    <section class="form_section">
+        <div class="form">
+            <h2 class="form_heading">Contact Us</h2>
+            <form class="my_form" action="https://jkorpela.fi/cgi-bin/echo.cgi" target="_blank" method="post">
+                <label class="input_label">
+                    <span class="label_text">Full name</span>
+                    <input class="input_field" type="text" name="user_full_name" placeholder="Ram Kaji">
+                </label>
+                <label class="input_label">
+                    <span class="label_text">Your Email Address</span>
+                    <input class="input_field" type="email" name="user_email" placeholder="hello@lastdoor.store">
+                </label>
+                <label class="input_label">
+                    <span class="label_text">Your Message</span>
+                    <input class="input_field message" type="text" name="user_message" placeholder="Type your message here...">
+                </label>
+                <button class="form_button" type="submit">Submit Your Message</button>
+            </form>
+        </div>
+        <div class="fluffy_copyright">
+            <p class="copyright">Copyright © 2018 LastDoor.Store</p>
+        </div>
+    </section>
 </body>
 </html>
