--- a/Lection15_Forms_updated/index.html
+++ b/Lection15_Forms_updated/index.html
@@ -125,7 +125,6 @@
                     <img src="./assets/logo-target.svg">
                 </div>
         </section>
-    </div>
     <section class="relax_section">
         <div class="relax_container">
             <div class="relax">
@@ -134,7 +133,10 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis nisl vulputate justo
                         consequat tempor. Nam gravida sed ipsum in pellentesque. Cras pellentesque placerat cursus.</p>
                     <ul class="relax_items">
-                        <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        <li>
+                            <div class="check">
+                            <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </div>
                         </li>
                         <li><i class="fa-solid fa-check"></i>Morbi iaculis nisl vulputate justo consequat tempor.</li>
                         <li><i class="fa-solid fa-check"></i>Nam gravida sed ipsum in pellentesque.</li>
@@ -176,5 +178,6 @@
             <p class="copyright">Copyright © 2018 LastDoor.Store</p>
         </div>
     </section>
+</div>
 </body>
 </html>
