added grid lesson

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <li>
             <a href="./Lection15_Forms_updated/">Lesson 15 Forms_Updated</a>
         </li>
+        <li>
+            <a href="./Lesson 16_CSS GRID/">Lesson 16_CSS GRID</a>
+        </li>
     </ul>
 </body>
 </html>
