--- a/Lesson 16_CSS GRID/index.html
+++ b/Lesson 16_CSS GRID/index.html
@@ -175,4 +175,97 @@
     </div>
 </body>
 
+<body>
+    <div class="page_wrapper">
+        <section class="header">
+            <div class="header_container">
+                <a class="header_logo" href="#">
+                    <img class="genesis_logo" src="./assets/genesis_logo.jpg" alt="genesis_logo">
+                </a>
+                <nav class="header_nav">
+                    <a href="#">Projects</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>
+        </section>
+        <section class="main_section">
+            <div class="main_introduction">
+                <div class="introduction">
+                    <h2 class="introduction_heading">You can write down your own heading</h2>
+                   <div class="introduction">
+                    <p class="introduction_details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis temporibus, earum perspiciatis deleniti nobis ipsa! 
+                        Earum eius voluptatibus aspernatur ipsam pariatur recusandae amet laudantium doloremque, quaerat accusantium architecto saepe.</p>
+                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis temporibus, 
+                        earum perspiciatis deleniti nobis ipsa! Earum eius voluptatibus aspernatur ipsam pariatur recusandae amet laudantium doloremque, architecto saepe.</p>   
+                   </div>
+                </div>
+                <!--<div class="portofolio_list">
+                    <ul class="labels">
+                        <li>Project</li>
+                        <li>Design</li>
+                        <li>Client</li>
+                        <li>Deliverable</li>
+                        <li>Year</li>
+                        <li>Field</li>
+                    </ul>
+                    <ul class="list_info">
+                        <li>Genesis Portofolio</li>
+                        <li>Bakhtiyar Sattarov</li>
+                        <li>Craftwork</li>
+                        <li>Website Design</li>
+                        <li>2018</li>
+                        <li>Branding, Personal</li>
+                    </ul>
+                </div>-->
+                <div class="project_informations">
+                    <div class="informations">
+                        <p class="info_title">Project</p>
+                        <p class="info_detailed">Genesis Portofolio</p>
+                    </div>
+                    <div class="informations">
+                        <p class="info_title">Design</p>
+                        <p class="info_detailed">Bakhtiyar Sattarov</p>
+                    </div>
+                    <div class="informations">
+                        <p class="info_title">Client</p>
+                        <p class="info_detailed">Crarftwork</p>
+                    </div>
+                    <div class="informations">
+                        <p class="info_title">Deliverable</p>
+                        <p class="info_detailed">Website Design</p>
+                    </div>
+                    <div class="informations">
+                        <p class="info_title">Year</p>
+                        <p class="info_detailed">2018</p>
+                    </div>
+                    <div class="informations">
+                        <p class="info_title">Field</p>
+                        <p class="info_detailed">Branding,Personal</p>
+                    </div> 
+                </div>
+            </div>
+            <img class="main_image" src="./assets/balloon.png" alt="balloon">
+            <p class="main_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis temporibus, earum perspiciatis deleniti nobis ipsa! Earum eius voluptatibus aspernatur ipsam pariatur recusandae amet laudantium doloremque, quaerat accusantium architecto saepe.
+                <br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis temporibus, earum perspiciatis deleniti nobis ipsa!</br> </p>
+            <div class="flex_images">
+                <img class="forest" src="./assets/forest.png" alt="forest">
+                <img class="flowers" src="./assets/flowers.png" alt="flowers">
+                <img class="night" src="./assets/night.png" alt="night">
+            </div>
+        </section>
+        <section class="footer_section">
+            <div class="footer">
+                <a class="logo" href="#">
+                    <img src="./assets/genesis_logo.jpg" alt="logo">
+                </a>
+                <nav class="footer_navigation">
+                    <a class="projects" href="#">Projects</a>
+                    <a class="contacts" href="#">Contact</a>
+                    <img src="./assets/Social.svg" alt="social">
+                </nav>
+            </div>
+        </section>
+  </div>          
+</body>
+
 </html>
