--- a/Lesson 16_CSS GRID/index.html
+++ b/Lesson 16_CSS GRID/index.html
@@ -175,7 +175,7 @@
     </div>
 </body>
 
-<body>
+<!--<body>
     <div class="page_wrapper">
         <section class="header">
             <div class="header_container">
@@ -216,7 +216,7 @@
                         <li>2018</li>
                         <li>Branding, Personal</li>
                     </ul>
-                </div>-->
+                </div>
                 <div class="project_informations">
                     <div class="informations">
                         <p class="info_title">Project</p>
@@ -266,6 +266,6 @@
             </div>
         </section>
   </div>          
-</body>
+</body>-->
 
 </html>
