added new file to the root

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <li>
             <a href="./Lesson 16_CSS GRID/">Lesson 16_CSS GRID</a>
         </li>
+        <li>
+            <a href="./Lesson 16_CSS GRID/index2.html">Lesson 16_CSS GRID</a>
+        </li>
     </ul>
 </body>
 </html>
