--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <li>
             <a href="./Lesson 16_CSS GRID/index2.html">Lesson 16_CSS GRID</a>
         </li>
+        <li>
+            <a href="./JavaScript/index.html">Calculator</a>
+        </li>
     </ul>
 </body>
 </html>
