added new page to the root file

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <li>
             <a href="./JavaScript/index.html">Calculator</a>
         </li>
+        <li>
+            <a href="./DOM/index.html">DOM HW</a>
+        </li>
     </ul>
 </body>
 </html>
