--- a/DOM/index.html
+++ b/DOM/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-    <button class="open_btn">OPEN</button>
-    <div class="modal_container">
+    <button class="open">OPEN</button>
+    <div class="modalContainer">
         <div class="modal">
             <p>This is some modal text</p>
-            <button class="close_btn">CLOSE</button>
+            <button class="close">CLOSE</button>
         </div>
     </div>
 
