--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <li>
             <a href="./App_HW/index.html">APP_HW</a>
         </li>
+        <li>
+            <a href="./Slider/">Slider</a>
+        </li>
     </ul>
 </body>
 </html>
