--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <li>
             <a href="./Slider/">Slider</a>
         </li>
+        <li>
+            <a href="./Project_2/">Project_2</a>
+        </li>
     </ul>
 </body>
 </html>
