--- a/Slider/index.html
+++ b/Slider/index.html
@@ -22,6 +22,24 @@
             <div class="carousel-item">
                 <img src="https://picsum.photos/300/400" alt="#">
             </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/300/400" alt="#">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/300/400" alt="#">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/300/400" alt="#">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/300/400" alt="#">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/300/400" alt="#">
+            </div>
+            <div class="carousel-item">
+                <img src="https://picsum.photos/300/400" alt="#">
+            </div>
         </div>
     </div>
 
