--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="./styles/fontawesome.css">
     <link rel="stylesheet" href="./styles/brands.css">
     <link rel="stylesheet" href="./styles/solid.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="./styles/main.css">
+
 </head>
 
 <body>
@@ -115,48 +118,90 @@
                 <div class="news_content">
                     <span class="news_line"></span>
                     <h1 class="news_heading">Latest News</h1>
-                    <div class="news_card">
-                        <div class="unmatched">
-                            <img class="beauty_card" src="./assets/unmatched_beauty.png" alt="beauty_card">
-                            <div class="card_info">
-                                <h1 class="card_heading">See the unmatched beauty of the great.</h1>
-                                <p class="card_description">Free directories: directories are perfect for customers that
-                                    are searching for...</p>
-                                <div class="author_card">
-                                    <img class="author_image" src="./assets/Alja.png">
-                                    <div class="author_info">
-                                        <p class="author_name">ALJA BRUN</p>
-                                        <p class="author_date">20 Jan 2020</p>
+                    <div class="my_slider">
+                        <div class="news_card">
+                            <div class="unmatched">
+                                <img class="beauty_card" src="./assets/unmatched_beauty.png" alt="beauty_card">
+                                <div class="card_info">
+                                    <h1 class="card_heading">See the unmatched beauty of the great.</h1>
+                                    <p class="card_description">Free directories: directories are perfect for customers
+                                        that
+                                        are searching for...</p>
+                                    <div class="author_card">
+                                        <img class="author_image" src="./assets/Alja.png">
+                                        <div class="author_info">
+                                            <p class="author_name">ALJA BRUN</p>
+                                            <p class="author_date">20 Jan 2020</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="advertising">
-                            <img class="advertising_card" src="./assets/advertising.png" alt="advertising_card">
-                            <div class="card_info">
-                                <h1 class="card_heading">Effective advertising pointers.</h1>
-                                <p class="card_description">Having a home based business is a wonderful asset to your
-                                    life...</p>
-                                <div class="author_card">
-                                    <img class="author_image" src="./assets/Dominic.png">
-                                    <div class="author_info">
-                                        <p class="author_name">Dominic Freeman</p>
-                                        <p class="author_date">13 Dec 2019</p>
+                        <div class="news_card">
+                            <div class="advertising">
+                                <img class="advertising_card" src="./assets/advertising.png" alt="advertising_card">
+                                <div class="card_info">
+                                    <h1 class="card_heading">Effective advertising pointers.</h1>
+                                    <p class="card_description">Having a home based business is a wonderful asset to
+                                        your
+                                        life...</p>
+                                    <div class="author_card">
+                                        <img class="author_image" src="./assets/Dominic.png">
+                                        <div class="author_info">
+                                            <p class="author_name">Dominic Freeman</p>
+                                            <p class="author_date">13 Dec 2019</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="hypnotize">
-                            <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
-                            <div class="card_info">
-                                <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
-                                <p class="card_description">There are many things that are important to catalog
-                                    design...</p>
-                                <div class="author_card">
-                                    <img class="author_image" src="./assets/Alice.png">
-                                    <div class="author_info">
-                                        <p class="author_name">Alice Ward</p>
-                                        <p class="author_date">30 Nov 2019</p>
+                        <div class="news_card">
+                            <div class="hypnotize">
+                                <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
+                                <div class="card_info">
+                                    <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
+                                    <p class="card_description">There are many things that are important to catalog
+                                        design...</p>
+                                    <div class="author_card">
+                                        <img class="author_image" src="./assets/Alice.png">
+                                        <div class="author_info">
+                                            <p class="author_name">Alice Ward</p>
+                                            <p class="author_date">30 Nov 2019</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news_card">
+                            <div class="hypnotize">
+                                <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
+                                <div class="card_info">
+                                    <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
+                                    <p class="card_description">There are many things that are important to catalog
+                                        design...</p>
+                                    <div class="author_card">
+                                        <img class="author_image" src="./assets/Alice.png">
+                                        <div class="author_info">
+                                            <p class="author_name">Alice Ward</p>
+                                            <p class="author_date">30 Nov 2019</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news_card">
+                            <div class="hypnotize">
+                                <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
+                                <div class="card_info">
+                                    <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
+                                    <p class="card_description">There are many things that are important to catalog
+                                        design...</p>
+                                    <div class="author_card">
+                                        <img class="author_image" src="./assets/Alice.png">
+                                        <div class="author_info">
+                                            <p class="author_name">Alice Ward</p>
+                                            <p class="author_date">30 Nov 2019</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -164,11 +209,14 @@
                     </div>
                 </div>
             </div>
-        </section>
+    </div>
+    </section>
 
     </div>
 
-
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./main.js"></script>
 
 
